--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 </head>
 
 <body>
-    <!--orange frame-->
     <div class="wrapper">
         <!--header-->
-        <header class="header">
+        <header class="header wrapper-child">
             <div id="menu">
                 <div id="logo" class="menu-child">
                     <img src="img/logos/img-high.jpeg" alt="logo Nuria Viana" width="100px" hieght="50px">
@@ -25,7 +24,6 @@
                 <div id="nav" class="menu-child">
                     <ul>
                         <li><a href="#" target="_blank">Detail</a></li>
-                        <li><a href="#" target="_blank">Portfolio</a></li>
                         <li><a href="#" target="_blank">Client talking</a></li>
                     </ul>
                 </div>
@@ -36,13 +34,32 @@
                     </button>
                 </div>
             </div>
-            <div class="section-title">
-                <h1>Hi There, I'm Nuria</h1>
-            </div>
         </header>
+        <!--Title-->    
+        <div class="section-title wrapper-child">
+            <h1>Hi There, I'm Nuria</h1>
+        </div>
         <!--articles-->
+        <div class="section-article wrapper-child">
+            <img src="./img/mainImage.png" alt="Nuria's profile"/>
+            <div id="about-me">
+                <h3><pre>// About Me</pre></h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                    Laudantium architecto qui, totam dolore optio explicabo 
+                    praesentium repudiandae sed, beatae facilis velit ullam 
+                    consequatur eum sapiente nihil neque! Magni, numquam 
+                    necessitatibus?</p>
+            </div>
+        </div>
+        <div class="section-article wrapper-child">
+            <div class="container-item">
+                <h6><strong>GET CV</strong></h6>
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </div>
+        </div>
 
     </div>
+
 
 
 </body>
