--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
   <body>
     <div class="wrapper">
       <!--header-->
-      <header class="header container">
-        <div class="menu">
-          <div id="logo" class="menu-child">
-            <img src="img/img-high.jpeg" alt="logo Nuria Viana" width="25%" />
+      <header class="header">
+        <div class="menu container-large">
+          <div id="logo">
+            <img src="img/img-high.jpeg" alt="logo Nuria Viana" width="20%" />
             <p>Front End Dev</p>
           </div>
-          <div id="nav" class="menu-child">
-            <ul class="flex-row">
-              <li><a href="#" target="_blank">Detail</a></li>
-              <li><a href="#" target="_blank">Client talking</a></li>
-            </ul>
+          <div id="nav">
+            <button onclick="">Detail</button>
+            <button onclick="">Client talking</button>
           </div>
-          <div id="nav-contact" class="menu-child">
-            <button>
-              <i>xx</i>
-              <a href="#" target="_blank">Contact</a>
-            </button>
+          <div id="nav-contact">
+            <button onclick="">Contact</button>
           </div>
         </div>
       </header>
       <!--Title-->
-      <div class="section-title container">
-        <h1>Hi There, I'm Nuria</h1>
-      </div>
+      <section class="section-title">
+        <h1>Hi There, I'm <em>Nuria</em></h1>
+      </section>
 
       <!--articles-->
-      <div class="section-article container">
-        <img src="./img/mainImage.jpg" alt="Nuria's profile" width="30%" />
+      <article class="main-profile container-large">
+        <img
+          class="main-img"
+          src="./img/mainImageJennifer.png"
+          alt="Nuria's profile"
+          width="30%"
+        />
         <div id="about-me">
           <h2><pre>// About Me</pre></h2>
           <p>
@@ -54,34 +54,35 @@
             neque! Magni, numquam necessitatibus?
           </p>
         </div>
-      </div>
-      <div class="section-article container">
-        <div class="container-item">
-          <h4><strong>GET CV</strong></h4>
+      </article>
+
+      <article class="cv-portfolio">
+        <button class="cv">
+          <strong>GET CV</strong>
           <i class="logo-linkedin"
             ><ion-icon name="logo-linkedin"></ion-icon
           ></i>
+        </button>
+        <button class="portfolio">
+          <strong>PORTFOLIO</strong>
+        </button>
+      </article>
+
+      <article class="tools">
+        <div class="tool-item container-medium">
+          <ion-icon class="icon" name="logo-html5"></ion-icon>
+          <ion-icon class="icon" name="logo-css3"></ion-icon>
+          <ion-icon class="icon" name="logo-javascript"></ion-icon>
+          <ion-icon class="icon" name="logo-github"></ion-icon>
+          <img class="icon-react" src="img/logos/React logo.png" width="10%" />
+          <img
+            class="icon"
+            src="img/logos/logo Bootstrap transp.png"
+            width="10%"
+          />
         </div>
-        <div class="container-item">
-          <h4><strong>PORTFOLIO</strong></h4>
-        </div>
-      </div>
-      <div class="section-article container">
-        <ion-icon name="logo-html5"></ion-icon>
-        <ion-icon name="logo-css3"></ion-icon>
-        <ion-icon name="logo-javascript"></ion-icon>
-        <ion-icon name="logo-github"></ion-icon>
-        <img src="img/logos/React logo.png" width="10%" />
-        <img src="img/logos/logo Bootstrap transp.png" width="10%" />
-      </div>
-      <div class="section-article container">
-        <img src="img/logos/logo html5.png" width="10%" />
-        <img src="img/logos/logo css3.jpg" width="10%" />
-        <img src="img/logos/logo JS ES6.png" width="10%" />
-        <img src="img/logos/React logo.png" width="10%" />
-        <img src="img/logos/logo Bootstrap transp.png" width="10%" />
-        <img src="img/logos/logo-GitHub.png" width="10%" />
-      </div>
+      </article>
+
       <!--footer-->
       <footer class="footer">Copyright &copy; 2022 by Nuria Viana</footer>
     </div>
