--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
       <!--header-->
       <header class="header">
         <div class="menu container-large">
-          <div id="logo">
-            <img src="img/img-high.jpeg" alt="logo Nuria Viana" width="20%" />
-            <p>Front End Dev</p>
+          <div class="logo">
+            <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
           </div>
-          <div id="nav">
-            <button onclick="">Detail</button>
-            <button onclick="">Client talking</button>
+          <div class="nav">
+            <button onclick=""><strong>Detail</strong></button>
+            <button onclick=""><strong>Client talking</strong></button>
           </div>
-          <div id="nav-contact">
-            <button onclick="">Contact</button>
+          <div class="nav-contact">
+            <button onclick=""><strong>Contact</strong></button>
           </div>
         </div>
       </header>
       <!--Title-->
-      <section class="section-title">
+      <section class="section-title container-large">
         <h1>Hi There, I'm <em>Nuria</em></h1>
       </section>
 
@@ -43,7 +42,6 @@
           class="main-img"
           src="./img/mainImageJennifer.png"
           alt="Nuria's profile"
-          width="30%"
         />
         <div id="about-me">
           <h2><pre>// About Me</pre></h2>
@@ -56,7 +54,7 @@
         </div>
       </article>
 
-      <article class="cv-portfolio">
+      <article class="cv-portfolio container-large">
         <button class="cv">
           <strong>GET CV</strong>
           <i class="logo-linkedin"
@@ -68,7 +66,7 @@
         </button>
       </article>
 
-      <article class="tools">
+      <article class="tools container-large">
         <div class="tool-item container-medium">
           <ion-icon class="icon" name="logo-html5"></ion-icon>
           <ion-icon class="icon" name="logo-css3"></ion-icon>
@@ -82,7 +80,6 @@
           />
         </div>
       </article>
-
       <!--footer-->
       <footer class="footer">Copyright &copy; 2022 by Nuria Viana</footer>
     </div>
