error links and refactor buttons

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
             <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
           </div>
           <div class="nav">
-            <button onclick=""><strong>Detail</strong></button>
-            <button onclick=""><strong>Client talking</strong></button>
-          </div>
+            <div class="container-a">
+              <a href="/detail.html"><strong>Detail</strong></a>
+            </div>
+            <div class="container-a">
+              <a href="/clientTalking.html"><strong>Client talking</strong></a>
+            </div>
           <div class="nav-contact">
-            <button onclick=""><strong>Contact</strong></button>
+            <a href="/contact1.html"><strong>Contact</strong></a>
           </div>
         </div>
       </header>
@@ -62,7 +65,7 @@
           ></i>
         </button>
         <button class="portfolio">
-          <strong>PORTFOLIO</strong>
+          <a class="portfolio" href="/detail.html"><strong>PORTFOLIO</strong></a>
         </button>
       </article>
 
