adding neva per nadal link

--- a/detail.html
+++ b/detail.html
@@ -75,7 +75,9 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a href="https://nvianaperez.github.io/TC-NevaPerNadal/"
+                  >View "Neva per Nadal"</a
+                >
               </div>
             </div>
           </div>
