add links a navegation

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
             <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
           </div>
           <div class="nav">
-            <div class="container-a">
-              <a href="/detail.html"><strong>Detail</strong></a>
-            </div>
-            <div class="container-a">
-              <a href="/clientTalking.html"><strong>Client talking</strong></a>
-            </div>
-          <div class="nav-contact">
-            <a href="/contact1.html"><strong>Contact</strong></a>
+            <button>
+              <a href="./detail.html"><strong>Detail</strong></a>
+            </button>
+            <button>
+              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+            </button>
           </div>
+          <div class="nav-contact">
+            <button>
+              <a href="./contact1.html"><strong>Contact</strong></a>
+            </button>
         </div>
       </header>
       <!--Title-->
