--- a/detail.html
+++ b/detail.html
@@ -23,11 +23,17 @@
             <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
           </div>
           <div class="nav">
-            <button onclick=""><strong>Detail</strong></button>
-            <button onclick=""><strong>Client talking</strong></button>
+            <button>
+              <a href="./detail.html"><strong>Detail</strong></a>
+            </button>
+            <button>
+              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+            </button>
           </div>
           <div class="nav-contact">
-            <button onclick=""><strong>Contact</strong></button>
+            <button>
+              <a href="./contact1.html"><strong>Contact</strong></a>
+            </button>
           </div>
         </div>
       </header>
