more links added

--- a/clientTalking.html
+++ b/clientTalking.html
@@ -21,13 +21,20 @@
         <div class="menu container-large">
           <div class="logo">
             <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
+            <!-- <a href="./index.html"></a> -->
           </div>
           <div class="nav">
-            <button onclick=""><strong>Detail</strong></button>
-            <button onclick=""><strong>Client talking</strong></button>
+            <button>
+              <a href="./detail.html"><strong>Detail</strong></a>
+            </button>
+            <button>
+              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+            </button>
           </div>
           <div class="nav-contact">
-            <button onclick=""><strong>Contact</strong></button>
+            <button>
+              <a href="./contact.html"><strong>Contact</strong></a>
+            </button>
           </div>
         </div>
       </header>
