--- a/detail.html
+++ b/detail.html
@@ -21,6 +21,7 @@
         <div class="menu container-large">
           <div class="logo">
             <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
+            <!-- <a href="./index.html"></a> -->
           </div>
           <div class="nav">
             <button>
@@ -32,7 +33,7 @@
           </div>
           <div class="nav-contact">
             <button>
-              <a href="./contact1.html"><strong>Contact</strong></a>
+              <a href="./contact.html"><strong>Contact</strong></a>
             </button>
           </div>
         </div>
@@ -61,7 +62,9 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a href="https://nvianaperez.github.io/TC-triaAventura/"
+                  >Live your adventure!
+                </a>
               </div>
             </div>
           </div>
