--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="nav-contact">
             <button>
-              <a href="./contact1.html"><strong>Contact</strong></a>
+              <a href="./contact.html"><strong>Contact</strong></a>
             </button>
         </div>
       </header>
