--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="contact-styles.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
-
-</head>
-
-<body>
-
+  <body>
     <div class="wrapper">
-        <!--header-->
-        <header class="header">
-            <div id="menu">
-                <div id="logo" class="menu-child">
-                    <img src="img/logos/img-high.jpeg" alt="logo Nuria Viana" width="100px" hieght="50px">
-                    <p>Front End Dev</p>
-                </div>
-                <div id="nav" class="menu-child">
-                    <ul>
-                        <li><a href="#" target="_blank">Detail</a></li>
-                        <li><a href="#" target="_blank">Portfolio</a></li>
-                        <li><a href="#" target="_blank">Client talking</a></li>
-                    </ul>
-                </div>
-                <div id="nav-contact" class="menu-child">
-                    <button>
-                        <i>xx</i>
-                        <a href="#" target="_blank">Contact</a>
-                    </button>
-                </div>
-            </div>
-            <div class="section-title">
-                <h1>Contact</h1>
-            </div>
-        </header>
-
-        <div class="container-form">
-            <form action="https://formcarry.com/s/IsqjmLCT4eE" method="POST" accept-charset="UTF-8" target="_blank">
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" placeholder="youremail@gmail.com" sized="50" required><br>
-                <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname" placeholder="Nuria" required><br>
-                <label for="lname">Last name:</label><br>
-                <input type="text" id="lname" name="lname" placeholder="Viana"><br><br>
-                <label for="comments">Comments:</label><br>
-                <input type="text" id="comments" name="comments" placeholder="Can I help you?" sized="250"><br>
-                <div class="submit">
-                    <input type="submit" value="Submit">
-                </div>
-
-            </form>
+      <!--header-->
+      <header class="header">
+        <div class="menu container-large">
+          <div class="logo">
+            <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
+            <!-- <a href="./index.html"></a> -->
+          </div>
+          <div class="nav">
+            <button>
+              <a href="./detail.html"><strong>Detail</strong></a>
+            </button>
+            <button>
+              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+            </button>
+          </div>
+          <div class="nav-contact">
+            <button>
+              <a href="./contact1.html"><strong>Contact</strong></a>
+            </button>
+          </div>
         </div>
+      </header>
+      <!--Title-->
+      <section class="section-title container-large">
+        <h1>Contact</em></h1>
+      </section>
+
+      <!--articles-->
+      <article class="container-form container-large">
+        <form class="container-medium" action="https://formcarry.com/s/IsqjmLCT4eE" method="POST" accept-charset="UTF-8" target="_blank">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" placeholder="Nuria" required><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" placeholder="Viana"><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" placeholder="youremail@gmail.com" sized="50" required><br>
+            <label for="comments">Comments:</label><br>
+            <input type="text" id="comments" name="comments" placeholder="Can I help you?" sized="250"><br>
+            <div class="submit">
+                <input type="submit" value="Submit">
+            </div>
+        </form>
+      </article>
 
 
 
-</body>
 
+
+      <!--footer-->
+      <footer class="footer">Copyright &copy; 2022 by Nuria Viana</footer>
+    </div>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
