final - content and img missed

--- a/clientTalking.html
+++ b/clientTalking.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="main-styles.css" />
     <link rel="stylesheet" href="clientTalking.css" />
   </head>
 
@@ -20,8 +21,9 @@
       <header class="header">
         <div class="menu container-large">
           <div class="logo">
-            <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
-            <!-- <a href="./index.html"></a> -->
+            <a href="./index.html"
+              ><img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana"
+            /></a>
           </div>
           <div class="nav">
             <button>
