--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="main-styles.css" />
     <link rel="stylesheet" href="contact-styles.css" />
   </head>
 
@@ -20,8 +21,9 @@
       <header class="header">
         <div class="menu container-large">
           <div class="logo">
-            <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
-            <!-- <a href="./index.html"></a> -->
+            <a href="./index.html"
+              ><img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana"
+            /></a>
           </div>
           <div class="nav">
             <button>
@@ -46,17 +48,23 @@
       <!--articles-->
       <article class="container-form container-large">
         <form class="container-medium" action="https://formcarry.com/s/IsqjmLCT4eE" method="POST" accept-charset="UTF-8" target="_blank">
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" placeholder="Nuria" required><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname" placeholder="Viana"><br><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" placeholder="youremail@gmail.com" sized="50" required><br>
-            <label for="comments">Comments:</label><br>
-            <input type="text" id="comments" name="comments" placeholder="Can I help you?" sized="250"><br>
-            <div class="submit">
-                <input type="submit" value="Submit">
+          <div class="form-flex">
+            <div class="form-first">
+              <label for="fname">First name:</label><br>
+              <input type="text" id="fname" name="fname" placeholder="Nuria" required><br>
+              <label for="lname">Last name:</label><br>
+              <input type="text" id="lname" name="lname" placeholder="Viana"><br><br>
+              <label for="email">Email:</label><br>
+              <input type="email" id="email" name="email" placeholder="youremail@gmail.com" sized="50" required><br>
             </div>
+            <div class="form-second">
+              <label for="comments">Comments:</label><br>
+              <textarea type="text" id="comments" name="comments" rows="5" cols="40" placeholder="Can I help you?" sized="500">Escribe tu comentario: </textarea>
+            </div>
+          </div>
+          <div class="submit">
+            <input type="submit" value="Submit">
+          </div>
         </form>
       </article>
 
