--- a/detail.html
+++ b/detail.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="main-styles.css" />
     <link rel="stylesheet" href="detail-styles.css" />
   </head>
 
@@ -20,8 +21,9 @@
       <header class="header">
         <div class="menu container-large">
           <div class="logo">
-            <img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana" />
-            <!-- <a href="./index.html"></a> -->
+            <a href="./index.html"
+              ><img src="img/NVP_LOGO_recortada.png" alt="logo Nuria Viana"
+            /></a>
           </div>
           <div class="nav">
             <button>
@@ -54,7 +56,11 @@
             />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>Tria la teva aventura</em></p>
+                <p><em>Choose your path</em></p>
+                <div class="icon-group">
+                  <ion-icon class="icon" name="logo-html5"></ion-icon>
+                  <ion-icon class="icon" name="logo-javascript"></ion-icon>
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -62,8 +68,10 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="https://nvianaperez.github.io/TC-triaAventura/"
-                  >Live your adventure!
+                <a
+                  href="https://nvianaperez.github.io/TC-triaAventura/"
+                  target="_blank"
+                  >Live your JavaScript adventure!
                 </a>
               </div>
             </div>
@@ -76,7 +84,11 @@
             />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>Neva per Nadal</em></p>
+                <p><em>Snow for Christmas</em></p>
+                <div class="icon-group">
+                  <ion-icon class="icon" name="logo-html5"></ion-icon>
+                  <ion-icon class="icon" name="logo-javascript"></ion-icon>
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -84,9 +96,11 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="https://nvianaperez.github.io/TC-NevaPerNadal/"
-                  >View "Neva per Nadal"</a
-                >
+                <a
+                  href="https://nvianaperez.github.io/TC-NevaPerNadal/"
+                  target="_blank"
+                  >View beautiful postcard
+                </a>
               </div>
             </div>
           </div>
@@ -98,7 +112,10 @@
             />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>React</em></p>
+                <p><em>Choose your path</em></p>
+                <div class="icon-group">
+                  <ion-icon name="logo-nodejs"></ion-icon>
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -106,7 +123,11 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a
+                  href="https://github.com/nvianaperez/TC-triaAventura-Node.git"
+                  target="_blank"
+                  >Live your Node adventure!</a
+                >
               </div>
             </div>
           </div>
@@ -115,6 +136,13 @@
             <div class="grid-details">
               <div class="grid-title">
                 <p><em>React</em></p>
+                <div class="icon-group">
+                  <img
+                    class="icon-react"
+                    src="img/logos/React logo.png"
+                    width="10%"
+                  />
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -122,7 +150,7 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a href="#" target="_blank">See the job!</a>
               </div>
             </div>
           </div>
@@ -135,6 +163,13 @@
             <div class="grid-details">
               <div class="grid-title">
                 <p><em>API Rest amb React</em></p>
+                <div class="icon-group">
+                  <img
+                    class="icon-react"
+                    src="img/logos/React logo.png"
+                    width="10%"
+                  />
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -142,7 +177,7 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a href="#" target="_blank">See the job!</a>
               </div>
             </div>
           </div>
@@ -151,6 +186,13 @@
             <div class="grid-details">
               <div class="grid-title">
                 <p><em>Others</em></p>
+                <div class="icon-group">
+                  <img
+                    class="icon-react"
+                    src="img/logos/React logo.png"
+                    width="10%"
+                  />
+                </div>
               </div>
               <div class="grid-description">
                 <p>
@@ -158,7 +200,7 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#">See the job!</a>
+                <a href="#" target="_blank">See the job!</a>
               </div>
             </div>
           </div>
