--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="main-styles.css" />
     <link rel="stylesheet" href="index-styles.css" />
   </head>
 
@@ -61,13 +62,13 @@
 
       <article class="cv-portfolio container-large">
         <button class="cv">
-          <strong>GET CV</strong>
+          <a href="https://www.linkedin.com/in/nuriaviana/" target="_blank"><strong>GET CV</strong></a>
           <i class="logo-linkedin"
             ><ion-icon name="logo-linkedin"></ion-icon
           ></i>
         </button>
         <button class="portfolio">
-          <a class="portfolio" href="/detail.html"><strong>PORTFOLIO</strong></a>
+          <a class="portfolio" href="/detail.html" target="_blank"><strong>PORTFOLIO</strong></a>
         </button>
       </article>
 
