--- a/detail.html
+++ b/detail.html
@@ -51,8 +51,8 @@
           <div class="grid-card">
             <img
               class="grid-img"
-              src="img/cards/INVIERNO-810x540.jpg"
-              alt="Tria la teva aventura"
+              src="img/cards/caminos.jpg"
+              alt="bifurcació de camins"
             />
             <div class="grid-details">
               <div class="grid-title">
@@ -79,8 +79,8 @@
           <div class="grid-card">
             <img
               class="grid-img"
-              src="img/cards/winterImg.jfif"
-              alt="Postal de Nadal"
+              src="img/cards/neva.jpg"
+              alt="paisatge nevat"
             />
             <div class="grid-details">
               <div class="grid-title">
@@ -107,8 +107,8 @@
           <div class="grid-card">
             <img
               class="grid-img"
-              src="img/cards/INVIERNO-810x540.jpg"
-              alt="React"
+              src="img/cards/caminosNode.jpg"
+              alt="camins entre boscos"
             />
             <div class="grid-details">
               <div class="grid-title">
@@ -132,10 +132,14 @@
             </div>
           </div>
           <div class="grid-card">
-            <img class="grid-img" src="img/cards/winterImg.jfif" alt="React" />
+            <img
+              class="grid-img"
+              src="img/cards/nevaReact.jpg"
+              alt="boscos nevats"
+            />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>React</em></p>
+                <p><em>Christmas tree</em></p>
                 <div class="icon-group">
                   <img
                     class="icon-react"
@@ -150,7 +154,11 @@
                   Laudantium architecto qui, totam dolore optio explicabo
                   praesentium repudiandae sed,
                 </p>
-                <a href="#" target="_blank">See the job!</a>
+                <a
+                  href="https://nvianaperez.github.io/TC-NevaPerNadal-React"
+                  target="_blank"
+                  >View the magic tree</a
+                >
               </div>
             </div>
           </div>
@@ -158,11 +166,11 @@
             <img
               class="grid-img"
               src="img/cards/INVIERNO-810x540.jpg"
-              alt="API Rest amb React"
+              alt="Exercises React"
             />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>API Rest amb React</em></p>
+                <p><em>Exercises</em></p>
                 <div class="icon-group">
                   <img
                     class="icon-react"
@@ -185,7 +193,7 @@
             <img class="grid-img" src="img/cards/winterImg.jfif" alt="Others" />
             <div class="grid-details">
               <div class="grid-title">
-                <p><em>Others</em></p>
+                <p><em>API Rest</em></p>
                 <div class="icon-group">
                   <img
                     class="icon-react"
