--- a/index.html
+++ b/index.html
@@ -46,16 +46,26 @@
       <article class="main-profile container-large">
         <img
           class="main-img"
-          src="./img/mainImageJennifer.png"
+          src="./img/NV4-removebg-preview.jpg"
           alt="Nuria's profile"
         />
         <div id="about-me">
           <h2><pre>// About Me</pre></h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            architecto qui, totam dolore optio explicabo praesentium repudiandae
-            sed, beatae facilis velit ullam consequatur eum sapiente nihil
-            neque! Magni, numquam necessitatibus?
+            Nuria Viana, marketiniana con 10 años de experiencia del lado de negocio.<br>
+            Desde septiembre de 2021 reinventándome para seguir creciendo 
+            como <strong>desarrolladora front-end</strong>.<br> 
+            Inmersa en el bootcamp de la IT Academy, 
+            la curiosidad me lleva a enrolarme en el aprendizaje de la librería React.
+            <br>
+            <br>           
+            Vivo con ilusión esta nueva etapa de mi vida profesional.<br>
+            Y mi objetivo es formar parte de un equipo de desarrolladores, 
+            aportando valor en cada iteración o entrega.<br>
+            Soy positiva, resiliente, respetuosa y disfruto trabajando en equipo.
+            <br>
+            <br>           
+            <strong>Sigue aquí y conóceme un poco más!</strong>
           </p>
         </div>
       </article>
