main English text

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
       <article class="main-profile container-large">
         <img
           class="main-img"
-          src="./img/NV4-removebg-preview.jpg"
+          src="./img/mainImageNV.png"
           alt="Nuria's profile"
         />
         <div id="about-me">
           <h2><pre>// About Me</pre></h2>
           <p>
-            Nuria Viana, marketiniana con 10 años de experiencia del lado de negocio.<br>
+            <!-- Nuria Viana, marketiniana con 10 años de experiencia del lado de negocio.<br>
             Desde septiembre de 2021 reinventándome para seguir creciendo 
-            como <strong>desarrolladora front-end</strong>.<br> 
+            como <strong>desarrolladora jr front-end</strong>.<br> 
             Inmersa en el bootcamp de la IT Academy, 
             la curiosidad me lleva a enrolarme en el aprendizaje de la librería React.
             <br>
@@ -65,7 +65,18 @@
             Soy positiva, resiliente, respetuosa y disfruto trabajando en equipo.
             <br>
             <br>           
-            <strong>Sigue aquí y conóceme un poco más!</strong>
+            <strong>Sigue aquí y conóceme un poco más!</strong> -->
+            Nuria Viana, marketer with 10 years of experience on the business side.<br>
+            Since September 2021 reinventing myself to continue growing as <strong>jr front-end developer</strong>.<br>
+            Immersed in the IT Academy bootcamp, own curiosity leads me to learn about React library.
+            <br>
+            <br>             
+            I am enthusiastic about this new stage of my professional life and choose to keep on learning every day.
+            My goal is to be part of a team of developers, adding value in each iteration or delivery.
+            I am positive, resilient, respectful and I enjoy team working.
+            <br>
+            <br>   
+            <strong>Stay here and take a look at my portfolio and interests!</strong>
           </p>
         </div>
       </article>
